@@ -1,3 +1,6 @@
+2006-01-26  Dariush Molavi  <dari@nukedgallery.net> 0.5.0-b2
+	* Change: Modified block files to use new EmbedAPI.
+
 2006-01-10  Dariush Molavi  <dari@nukedgallery.net> 0.5.0-b1
 	* Change: Modified all code to work with new EmbedAPI. Still need to add
 	  API version checking, etc.
